# hunter

./: .travis.yml  appveyor.yml
_data/projects/: libxdg-basedir.json
cmake/configs/: default.cmake
cmake/projects/libconfig/: hunter.cmake
examples/libconfig/: CMakeLists.txt  boo.c  boo.cpp
